boinc (7.2.22+dfsg-1) UNRELEASED; urgency=low

  * New upstream release

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Fri, 11 Oct 2013 18:06:33 +0200

boinc (7.2.17+dfsg-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Guo Yixuan <culu.gyx@gmail.com>  Mon, 23 Sep 2013 13:29:53 -0400

boinc (7.2.14+dfsg-1exp2) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * Adapting for upstream's additional directories in html/

  [ Guo Yixuan ]
  * Disabled silent rules for build log check.
    (debian/patches/disable_silent_rules.patch)

 -- Steffen Moeller <moeller@debian.org>  Sat, 31 Aug 2013 20:08:38 +0200

boinc (7.2.14+dfsg-1exp1) experimental; urgency=low

  * Building boinc-server-maker package

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Sat, 31 Aug 2013 01:05:41 +0200

boinc (7.2.14+dfsg-1) unstable; urgency=low

  * New upstream release
  * Now the server package is built or not depending on
    the debian target series:
    - target=unstable, server NOT built
    - target=experimental, server built
  * Fixed clean in debian/rules file

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Sat, 31 Aug 2013 00:57:40 +0200

boinc (7.2.11+dfsg-1exp4) UNRELEASED; urgency=low

  [ Gianfranco Costamagna ]
  * Addressed executable-not-elf-or-script lintian warning
    - usr/lib/boinc-server-maker/tools/project.xml
    - usr/share/doc/boinc-server-maker/examples/wrapper/build_android.sh
  * Addressed other file permissions problems
  * Fixed italian localization problem

  [ Guo Yixuan ]
  * Added ${python:Depends} and ${perl:Depends} to debian/control.in

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Sat, 24 Aug 2013 01:20:07 +0200

boinc (7.2.11+dfsg-1exp3) experimental; urgency=low

  * Tweaked again hurd patches, now the missing
    MAXPATHLEN should have been addressed

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Thu, 22 Aug 2013 23:14:34 +0200

boinc (7.2.11+dfsg-1exp2) experimental; urgency=low
