@@ -1,6 +1,10 @@
 boinc (7.2.22+dfsg-1) UNRELEASED; urgency=low
 
+  [ Gianfranco Costamagna ]
   * New upstream release
+
+  [ Guo Yixuan ]
+  * Removed boinc-amd-opencl, since fglrx-driver was removed from testing.
 
  -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Fri, 11 Oct 2013 18:06:33 +0200
 
